examples/test/testpolicy15933.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15933
  namespace: namespace57
spec:
  podSelector:
    matchLabels:
      key46: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value10
          key8: value25
          key39: value46
      podSelector:
        matchLabels:
          key36: value40
          key44: value0
